--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "scripts": {
-    "watch": "tsc index.ts --outfile index.js --watch",
-    "live": "live-server"
-  },
-  "devDependencies": {
-    "install": "^0.13.0",
-    "live-server": "^1.2.2",
-    "typescript": "^4.8.3"
-  }
+	"scripts": {
+		"watch": "tsc --watch ",
+		"live": "node ./node_modules/.bin/live-server"
+	},
+	"devDependencies": {
+		"install": "^0.13.0",
+		"live-server": "^1.2.2",
+		"typescript": "^4.8.3"
+	}
 }
